Added Vidya Clone demo and demo tracks.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <a href="https://www.linkedin.com/in/chris-s-marston/"><img src="./assets/linkedin-icon.png" alt="LinkedIn icon" class="icon_1"></a>
                 <a href="./chris-marston-resume.pdf"><img src="./assets/resume-icon-1.png" alt="Resume icon" class="icon_2"></a>
             </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <h2>Projects</h2>
+            <p><a href="http://localhost:5501/vidya-clone/vidya-clone.html">Vidya Clone</a></p>
         </div>
     </div>
 </body>
