--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <br>
             <h2>Projects</h2>
             <p><a href="http://localhost:5501/vidya-clone/vidya-clone.html">Vidya Clone</a></p>
+            <p><a href="http://localhost:5501/legos-through-the-ages/legos-through-the-ages.html">Legos Through the Ages</a></p>
+            <p style="font-size: 8pt; margin-top: 0%;">(loads slowly)</p>
         </div>
     </div>
 </body>
@@ -54,6 +56,11 @@
     h1, h2 {
         padding: 0%;
         margin: 0%;
+    }
+
+    p {
+        margin: 3px;
+        padding: 0%;
     }
 
     a:link {
