Fixed broken links.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <br>
             <br>
             <h2>Projects</h2>
-            <p><a href="https://krisairdancer.github.io/csmarston-dot-com:5501/vidya-clone/vidya-clone.html">Vidya Clone</a></p>
-            <p><a href="https://krisairdancer.github.io/csmarston-dot-com:5501/legos-through-the-ages/legos-through-the-ages.html">Legos Through the Ages</a></p>
+            <p><a href="https://krisairdancer.github.io/csmarston-dot-com/vidya-clone/vidya-clone.html">Vidya Clone</a></p>
+            <p><a href="https://krisairdancer.github.io/csmarston-dot-com/legos-through-the-ages/legos-through-the-ages.html">Legos Through the Ages</a></p>
             <p style="font-size: 8pt; margin-top: 0%;">(loads slowly)</p>
         </div>
     </div>
