--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <br>
             <h2>Projects</h2>
             <p><a href="https://csmarston.com/vidya-clone/vidya-clone.html">Vidya Clone</a></p>
+            <p style="font-size: 8pt; margin-top: 0%;">(looks best on Edge & Chrome)</p>
             <p><a href="https://csmarston.com/legos-through-the-ages/legos-through-the-ages.html">Legos Through the Ages</a></p>
             <p style="font-size: 8pt; margin-top: 0%;">(loads slowly)</p>
         </div>
