--- a/vidya-clone/vidya-clone.html
+++ b/vidya-clone/vidya-clone.html
@@ -85,7 +85,7 @@
       <hr>
       <p>All Tracks © & ℗ Their Respective Owners</p>
       <hr>
-      <p>Vidya Clone by <a href="https://csmarston.com/csmarston-dot-com" target="_blank">KrisAirdancer</a></p>
+      <p>Vidya Clone by <a href="https://csmarston.com/" target="_blank">KrisAirdancer</a></p>
       <p>Original <a href="https://www.vipvgm.net/" target="_blank">Vidya Intarweb Playlist</a> by <a href="https://www.aersia.net/">Cats 777</a></p>
       <p>Player design by <a href="https://www.aersia.net/" target="_blank">Cats 777</a></p>
       <br>
