Removed assets folder.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- <link rel="stylesheet" href="styles.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/png">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/png">
     <title>Chris Marston</title>
 </head>
 <body>
@@ -13,9 +13,9 @@
             <h1>Chris Marston</h1>
             <h2>Computer Science Student</h2>
             <div id="iconBar">
-                <a href="https://github.com/KrisAirdancer"><img src="./assets/github-icon.png" alt="GitHub icon" class="icon_1"></a>
-                <a href="https://www.linkedin.com/in/chris-s-marston/"><img src="./assets/linkedin-icon.png" alt="LinkedIn icon" class="icon_1"></a>
-                <a href="./assets/chris-marston-resume.pdf"><img src="./assets/resume-icon-1.png" alt="Resume icon" class="icon_2"></a>
+                <a href="https://github.com/KrisAirdancer"><img src="./github-icon.png" alt="GitHub icon" class="icon_1"></a>
+                <a href="https://www.linkedin.com/in/chris-s-marston/"><img src="./linkedin-icon.png" alt="LinkedIn icon" class="icon_1"></a>
+                <a href="./chris-marston-resume.pdf"><img src="./resume-icon-1.png" alt="Resume icon" class="icon_2"></a>
             </div>
             <br>
             <br>
