--- a/vidya-clone/vidya-clone.html
+++ b/vidya-clone/vidya-clone.html
@@ -3,7 +3,7 @@
 <head>
     <title>Vidya Clone</title>
     <meta charset="utf-8">
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="./assets/favicon.ico" />
     <link rel="stylesheet" href="./styles.css">
     <script src="./scripts.js"></script>
 </head>
