--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <p style="font-size: 8pt; margin-top: 0%;">(looks best on Edge & Chrome)</p>
             <p><a href="https://csmarston.com/legos-through-the-ages/legos-through-the-ages.html">Legos Through the Ages</a></p>
             <p style="font-size: 8pt; margin-top: 0%;">(loads slowly)</p>
+            <p><a href="https://krisairdancer.github.io/compound-interest-calculator/">Compound Interest Calculator</a></p>
         </div>
     </div>
 </body>
