--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <br>
             <br>
             <h2>Projects</h2>
+            <p><a href="https://github.com/KrisAirdancer/ecosim">EcoSim</a></p>
+            <p><a href="https://github.com/KrisAirdancer/pony-express-chat-app">Pony Express</a></p>
             <p><a href="https://csmarston.com/vidya-clone/vidya-clone.html">Vidya Clone</a></p>
             <p style="font-size: 8pt; margin-top: 0%;">(looks best on Edge & Chrome)</p>
             <p><a href="https://csmarston.com/legos-through-the-ages/legos-through-the-ages.html">Legos Through the Ages</a></p>
